# fer_symmetry

./: README.md
parallel_ising/: CMakeLists.txt  README.md  all_pairs_6_vertex.py  concatenate_U_pkl.py  curve_fit_M.py  example_6_vertex.py  gen_exec_noChecking_s_gansu.py  gen_exec_noChecking_s_harbin.py  gen_exec_noChecking_s_raccoon.py  gen_exec_noChecking_s_scan_NT_gansu.py  gen_pkl_M_data2csv_scan_N_T_gansu.py  gen_pkl_U_data2csv.py  gen_pkl_U_data2csv_gansu.py  gen_pkl_U_data2csv_harbin.py  gen_pkl_U_data2csv_scan_N_T_gansu.py  gen_pkl_s_data2csv.py  gen_pkl_s_data2csv_gansu.py  gen_pkl_s_data2csv_harbin.py  iterate_compute_M_avg.py  iterate_compute_U_avg.py  iterate_load_csv_plt_M.py  iterate_load_csv_plt_U.py  iterate_pkl_U_data2csv.py  launch_one_run_dipole.py  mk_dir.py  mk_dir_gansu.py  mk_dir_harbin.py  mk_dir_scan_NT_gansu.py  param.csv
parallel_ising/data2csv/: pkl_M_data2csv.py  pkl_s_data2csv.py
parallel_ising/init_run_scripts/: load_previous_data.py  parseConf.py
parallel_ising/mc_subroutine/: mc_read_load_compute.cpp  mc_read_load_compute.hpp
parallel_ising/plt/: TT_fit_M.py  compute_M2_overlap_collapse.py  compute_M_avg.py  compute_U_avg.py  compute_corr_abs_magnetization.py  compute_corr_s00_avg.py  compute_dT_M.py  compute_dT_chi.py  compute_s_avg.py  compute_xi_collapse.py  compute_xi_overlap_collapse.py  fit_M.py  fit_chi.py  load_UL_all_N.py  load_csv_fit_log_M.py  load_csv_plt_C.py  load_csv_plt_M.py  load_csv_plt_M2_combined.py  load_csv_plt_M_T_larger.py  load_csv_plt_U.py  load_csv_plt_abs_magnetization.py  load_csv_plt_collapse.py  (+13 more)
(+35 files in other folders)
